# mini-nucleiq-code-challenge

./: .gitignore  NOTES.md  README.md  pyproject.toml
src/mini_nucleiq/: __init__.py  algorithms.py  analysis.py  samples.py
tests/: conftest.py  doubles.py  smoke_test.py  test_acceptance.py  test_algorithms.py  test_analysis.py  test_integration.py  test_samples_client.py
