[project]
name = "mini-nucleiq"
version = "0.0.0"
description = "Code challenge made by Carlos Vilas Alvarez"
readme = "README.md"
authors = [
    { name = "cavundercover", email = "carlosvilasalvarez+undercover@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]